<resources>
    <string name="app_name">Cervical Cancer Care</string>
    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Sign in to continue managing cervical cancer care.</string>
    <string name="login_form_title">Sign in</string>
    <string name="login_form_subtitle">Use your account credentials to continue.</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_error_username_required">Please enter username</string>
    <string name="login_error_password_required">Please enter password</string>
    <string name="login_no_internet_title">No Internet Connection</string>
    <string name="login_no_internet_message">An active internet connection is required.\nPlease check your internet connection and try again.</string>
    <string name="landing_title">Cervical Cancer Care</string>
    <string name="landing_subtitle">Clinical decision support for safer, faster care delivery.</string>
    <string name="landing_card_text">Workflows for screening, diagnosis, and patient follow-up.</string>
    <string name="landing_loading_text">Loading secure workspace...</string>
    <string name="location_downloader_title">Preparing your workspace</string>
    <string name="location_downloader_subtitle">Syncing your data so care activities get ready.</string>
    <string name="location_sync_badge">FHIR Location Sync</string>
    <string name="location_sync_enqueued">Preparing sync job...</string>
    <string name="location_sync_running">Syncing locations...</string>
    <string name="location_sync_running_detail">This can take a moment depending on connection quality.</string>
    <string name="location_sync_success">Setup complete</string>
    <string name="location_sync_success_detail">Opening dashboard…</string>
    <string name="location_sync_blocked">Waiting for network…</string>
    <string name="location_sync_failed">Location sync unavailable</string>
    <string name="location_sync_failed_detail">You can continue now and retry sync later from the app.</string>
    <string name="location_sync_continue">Continue</string>
    <string name="home_badge">Care Dashboard</string>
    <string name="home_greeting">Welcome back</string>
    <string name="home_default_user">Clinician</string>
    <string name="home_logout">Log out</string>
    <string name="home_search_hint">Search patient by name</string>
    <string name="home_patients_overview">Loading patients…</string>
    <string name="home_patients_count">%1$d active patient(s)</string>
    <string name="home_patient_dob_age">DOB: %1$s (%2$s)</string>
    <string name="home_patient_identifier">%1$s: %2$s</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="base_url"> https://cancer-modelling-demo.intellisoftkenya.com/api/</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_questionnaire_message">Are you sure you want to cancel?</string>
    <string name="support_tool">Clinical Decision \nSupport Tool for \nCancer Management</string>
    <string name="go_to_diagnosis">Go to Diagnosis</string>
    <string name="send_recommendation_to_patient">Send Recommendation to Patient</string>
    <string name="add_recommendation">Add Recommendation</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="inputs_missing">Enter all required fields</string>
    <string name="message_patient_updated">Patient details updated</string>
    <string name="view_recommendations">View Recommendations</string>
    <string name="log_out">Log Out?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log Out?</string>
    <string name="processing_request">Processing Request</string>
</resources>
